# grab

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/scripts/: get-changelog-for-version.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs  options.rs  process.rs  types.rs
src/fields/tokenizer/: csv.rs  mod.rs  whitespace.rs
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/: many_columns.csv  missing_columns.csv  simple.csv  simple_newline.csv  whitespace.csv
tests/snapshots/: cli__happy__colspan.snap  cli__happy__empty.snap  cli__happy__ending_with_newline.snap  cli__happy__greedy.snap  cli__happy__join.snap  cli__happy__loose.snap  cli__happy__loose_extra_column.snap  cli__happy__placeholder.snap  cli__happy__simple.snap  cli__happy__stdin.snap  cli__happy__whitespace.snap  cli__unhappy__missing_columns.snap
