[package]
name = "grab-cli"
version = "0.1.0"
edition = "2024"
authors = ["anwitars <anwitarsbusiness@gmail.com>"]
description = "A high-performance, declarative stream processor for delimited text data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/anwitars/grab"
keywords = ["csv", "json", "cli", "stream", "parser"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "grab"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
regex = "1.12.3"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = "1.46.3"
serde_json = "1.0.149"
proptest = "1.10.0"
